# srt-agent-api

./: .gitignore  DOCKER.md  Dockerfile  GPU_TWEAKS.md  LEARNINGS.md  PROVIDERS.md  README.md  ROADMAP.md  WORKFLOW.md  config-example.yaml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
app/: api_service.py  cli_interface.py  main.py  test_runner.py
app/modules/: agentic_reflection_module.py  base_module.py  chat_module.py  llm_provider.py  product_comparison_module.py  search_module.py  translation_module.py  wiki_summary_module.py  wikipedia_query_module.py
archive/: PROVIDERS.md
archive/providers/: __init__.py
src/: api_module.py  app.py  basic_chat.py  chat_module.py  llm_provider.py  main.py  search_module.py  wiki_summary_module.py
src/srt_web_chat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
temp/providers/: providers.py
tests/: test_agentic_reflection_module.py  test_api_module.py  test_chat_module.py  test_llm_provider.py  test_main.py  test_product_comparison_module.py  test_search_module.py  test_wiki_summary_module.py  test_wikipedia_query_module.py
