[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-web-chat"
version = "0.1.4"
description = "A modular web chat application integrating srt-core and llama-cpp-agent frameworks."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SolidRusT Networks", email = "info@solidrust.net"}
]

dependencies = [
    "srt-core>=0.1.15",
    "setuptools",
    "llama-cpp-python>=0.2.60",
    "llama-cpp-agent>=0.2.32",
    "requests>=2.31.0",
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/SolidRusT/srt-web-chat"

[project.optional-dependencies]
vllm_provider = ["openai", "transformers", "sentencepiece", "protobuf"]
search_module = [
    "pypdf", 
    "trafilatura",
    "readability-lxml",
    "duckduckgo_search",
    "googlesearch-python"
]
wiki_summary_module = [
    "pydantic", 
    "ragatouille",
    "typing-extensions"
]
wikipedia_query_module = [
    "chromadb"
]

[tool.setuptools.packages.find]
where = ["app"]

[project.scripts]
start-api = "app.api_service:main"
run-cli = "app.cli_interface:main"
run-tests = "app.test_runner:run_tests"
