[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "srt-agent-api"
version = "0.2.0"
description = "A modular agentic api and cli application integrating srt-core and llama-cpp-agent frameworks."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Suparious", email = "suparious@solidrust.net"}
]
requires-python = ">=3.11,<3.13"

dependencies = [
    "srt-core>=0.1.15",
    "setuptools",
    "llama-cpp-python>=0.2.60",
    "llama-cpp-agent>=0.2.32",
    "requests>=2.31.0",
    "uvicorn>=0.30.1",
    "fastapi>=0.111.0"
]

classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]

all = [
    "openai",
    "transformers",
    "sentencepiece",
    "protobuf",
    "pypdf",
    "trafilatura",
    "readability-lxml",
    "duckduckgo_search",
    "googlesearch-python",
    "pydantic",
    "ragatouille",
    "typing-extensions",
    "chromadb"
]

vllm_provider = ["openai", "transformers", "sentencepiece", "protobuf"]
search_module = [
    "pypdf", 
    "trafilatura",
    "readability-lxml",
    "duckduckgo_search",
    "googlesearch-python"
]
wiki_summary_module = [
    "pydantic", 
    "ragatouille",
    "typing-extensions"
]
wikipedia_query_module = [
    "chromadb"
]
product_comparison_module = ["llama_cpp_agent"]

[tool.setuptools.packages.find]
where = ["app"]

[project.scripts]
start-api = "app.api_service:main"
run-cli = "app.cli_interface:main"
run-tests = "app.test_runner:run_tests"

[project.urls]
Homepage = "https://github.com/SolidRusT/srt-agent-api"
